syntax = "proto3";

package server;


option go_package = "Trashed/proto";

message GameCode {
  string code = 1;
}

service GameService {
  rpc CreateGame (Empty) returns (GameCode);
  rpc JoinGame (PlayerData) returns (stream GameData);
}

message PlayerData{
    string player_uuid = 1;
    int64 timestamp = 2;     //For sync
    string username = 3;
    string color = 4;
    int32 slot = 5;
    string game_code= 6; // CÃ³digo de la partida a la que se une
}

message GameData {
  string code = 1;                     // Unique game code
  repeated PlayerData players = 2;     // List of players in the game
}

message GameState{
    repeated PlayerState players = 1;
    repeated AsteroidState asteroids = 2;
    repeated BulletState bullets = 3;
}

message PlayerState{
    string player_uuid = 1;
    int64 timestamp = 2;    //For sync
    int32 posX = 3; 
    int32 posY = 4;
    int32 angle = 5;
}

message PlayerShot{
    string player_uuid = 1;
    int64 timestamp = 2;
    int32 speed = 3;
    int32 rotation = 4;
    int32 posX = 5;
    int32 posY = 6;
}

message AsteroidState{
    int32 posX = 1;
    int32 posY = 2;
    int32 angle = 3;
    }

message BulletState{
    int32 posX = 1;
    int32 posY = 2;
    int32 angle = 3;
}


message Empty{}